assets/src/modules/sm/App/styles/global.css
/* ... */
table {
	overflow:auto;
}

.center {
	text-align: center;
}

img {
	border: 0;
}

label {
	font-weight: 300 !important;
}

/* MASTER THEME STYLES */
body.print div[schedule] > .panel {
	box-shadow: none;
	border: none;
	min-width: 720px;
	margin: 0 auto;
}

body.print div[schedule].bow svg g[svg-schedule-item] rect,
body.print div[schedule].gow svg g[svg-schedule-item] rect {
	fill: #FFFFFF !important;
	fill-opacity: 1 !important;
	stroke: #000;
	stroke-width: 1px;
}

body.print div[schedule].gow svg g[svg-schedule-item] rect {
	stroke: #555;
}

body.print div[schedule].bow text,
body.print div[schedule].boc svg g[svg-schedule-item] text {
	fill: #000000 !important;
}

body.print div[schedule].bow svg line {
	stroke: #000000 !important;
}

body.print div[schedule].gow svg g[svg-schedule-item] text {
	fill: #333 !important;
}

body.print #superContainer {
	background-color: #ffffff;
}

body.default footer.main.default {
	display: block;
}

body.default footer.main.print {
	display: none;
}

body.print footer.main.default {
	display: none;
}

body.default header.main {
	display: block;
}

body.print header.main {
	display: none;
}


body.print footer.main.print {
	display: block;
}

@media print {
  body.print a[href]:after {
    content: "";
  }
}

body.default #superContainer {
    background-color: #2B4E69;
    padding-top: 40px;
}

body.print #superContainer {
    background-color: #FFFFFF;
}

body.default #container {
	position: relative;
    margin-left: auto;
	margin-right: auto;
    background-color: #2B4E69;
}

body.print #container {
    background-color: #FFFFFF;
}

footer.main.default {
	position: relative;
	padding:20px;
	background-color:#2C3E50;
	color:#ccc;
}

footer.main.default .logo {
	position:relative;
	float:left;
	margin-top:31px;
	margin-bottom:20px;
	margin-right:180px;
	font-size:25px;
	font-weight:bolder;
	text-shadow:0 2px 1px black;
}

footer.main.default .csh {
	position:relative;
	float:right;
	margin-top:6px;
}

footer.main.default a {
	color: #EEE;
	text-decoration:none;
}
footer.main.default a:hover {
	color: #EEE;
	text-decoration:underline;
}

footer.main.default .OLDnav {
	font-size:16px;
	margin-bottom:10px;
	text-shadow: 0 1px 1px black;
}

footer.main.print {
	height: 50px;
	text-align: center;
	line-height: 50px;
	margin-top: -30px;
}

footer.main.print img {
	vertical-align:middle;
}

footer.main.print a {
	color: #000;
}

#print_header {
	margin: 0 0;
}

input[type=text] {
	margin-top:0px;
}

/**************************************************************************/
/* GLOBAL STYLES */
/* Positioning - */

optgroup {
    font-weight:bold;
    font-style:normal;
    color: grey;
}
option {
    color: black;
}

/**************************************************************************/
/* INDEX */
#mainMenu {
	margin-top:5%;
	margin-bottom:5%;
	overflow:auto;
}
#mainMenu .navItem {
    margin: 0 auto;
	position:relative;
	text-align:center;
}
#mainMenu .navItem a:hover i {
	background: rgba(225, 225, 225, .1);
}
#mainMenu .navItem i {
		padding: 10px;
		border-radius: 10px;
		display:inline-block;
	}
@media only screen and (max-width:767px) {
	#mainMenu .navItem i {
		font-size:50px;
	}
}
@media only screen and (min-width:768px) {
	#mainMenu .navItem i {
		font-size:200px;
	}
}

#mainMenu .navItem div {
	font-size: 18px;
	text-shadow: 0 1px 1px black;
	margin-top:5%;
}

@media only screen and (max-width:767px) {
    #mainMenu .navItem div  a{
        font-size: 16px;
    }
}
#mainMenu .navItem a {
	color: #EEE;
	text-decoration: none;
}

#mainMenu td {
	padding:15px;
}
.lbl {
	text-align:right;
}
form {
	margin-bottom:5px;
}

/* VARIOUS FIXES */
.list-group li a {
	color: #333;
}
.list-group li a:hover {
	color: #111;
}
.list-group li.active a {
	color: #fff;
}
.list-group li.active a:hover {
	color: #ccc;
}

.course-error {
	padding: 9px;
	margin-bottom:0px;
}

.course-result {
	/*padding: 0 1px;*/
	margin-bottom:0px;
}
.course-selected-checkbox {
	display:none;
}
.course-info {
	transition:  background-color .25s ease, color .25s ease, border .25s ease;
	background-color:#eee;
	border:1px solid #eee;
	color:#333;
}
.selected-course {
	border:1px solid #2c3e50;
	background-color:#2c3e50;
	color:#fff;
}
.course-info a {
	color:#fff !important;
}
.label-line {
	line-height:2em;
}

.display-options-header {
	cursor: pointer;
}

/* NEW SCHEDULES */

div[schedule] .canvas-cont {
	height:500px;
	width:700px;
	margin: 0 auto;
  
}

div[schedule] .schedule-loading {
	padding-right: 10px;
	padding-top: 8px !important;
	float: right;
}

@media screen and (max-width:768px) {
	div[schedule] {
	    overflow: hidden;
	}
	div[schedule] .canvas-cont {
		height:500px;
		width:320px;
		margin: 0 auto;
		overflow-x: scroll;
	}  
	.schedule-loading {
		clear: both;
		padding-top: 15px;
		text-align: center;
		float: none !important;
	}
	   
	   
	.btn-xs-block {
		display: block;	
	}
}


/* BOOTSTRAP EXTENSIONS */
.btn {
	transition: background-color .25s ease, box-shadow .125s ease;
}

.btn-group-dow {
	width: 100%;
}


select.ng-invalid {
	color:#ccc;
	font-style: italic;
}

.btn-dow {
	padding: 11px 9px;
	width: 14.28%;
}
.vert-spacer-sm {
	margin-bottom:10px;
	width:1px;
	float:left;
}

.vert-spacer-static-sm {
	margin-bottom:10px;
	width:1px;
}
.vert-spacer-md {
	margin-bottom:20px;
	width:1px;
	float:left;
}
.vert-spacer-static-md {
	margin-bottom:20px;
	width:1px;
}

@media screen and (max-width:767px) {
	.smaller-sm {
		font-size: smaller;
	}
	
	.margin-bottom-sm {
		margin-bottom: 15px;
	}
	
	.inline-sm {
		display: inline-block;
	}
	
	.center-sm {
		display: block;
		text-align: center;
		float: none !important;
	}
	
	.block-sm {
		display: block;
	}
	
	.pull-right-sm {
		float: right;
	}
	
	.pull-left-sm {
		float: left;
	}
	
	#browse-contents .list-group-item {
	padding: 10px 8px
	}
}
/* ... */

